src/app/pages/home/home.page.scss
ion-toolbar {
  margin: 1em 0;
  padding-bottom: 1em;
  --border-width: 0 !important;

  .about {
    --background: white;
    --background-activated: white;
    --box-shadow: none;
    --color: var(--ion-color-inria);
    --color-activated: var(--ion-color-inria-shade);
  }
}

.logo {
  width: 150px;
  text-align: left;

  ion-img {
    display: block;
    width: 120px;
    height: auto;
    margin-left:20px;
  }

  ion-text {
    display: block;
    margin-top: 5px;
    margin-left:20px;
    font-size: .8em;
  }
}

.home-course {
}

.title-wrapper {
  width: 85%;
  margin-right: -10px;
  margin-left: auto;
  padding: 2em;
  background: var(--ion-color-inria);
  clip-path: polygon(0 10%, 100% 0, 100% 100%, 0 90%);

  .title-container {
    color: white;

    .title {
      text-transform: uppercase;
      margin: 0 1em 0 0;
    }
  }
}

.trailer-course {
  position: relative;
  width: 80%;
  min-width: 250px;
  margin: 6vh auto;
  video {
    display: block;
    width: 100%;
    height: auto;
    margin: auto;
    box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
    border: 2px solid var(--ion-color-inria-blue);
    border-radius: 10px;

    &::-webkit-media-controls-timeline,
    &::-webkit-media-controls-timeline-container,
    &::-webkit-media-controls-fullscreen-button,
    &::-webkit-media-controls-overlay-play-button,
    &::-webkit-media-controls-play-button,
    &::-webkit-media-controls-toggle-closed-captions-button,
    &::-webkit-media-controls-volume-slider,
    &::-webkit-media-controls-mute-button,
    &::-webkit-media-controls-time-remaining-display,
    &::-webkit-media-controls-current-time-display{
      display: none!important;
    }
  }

  img{
    position: absolute;
    width:100%;
    top:0;
    left:0;
    bottom:-2px;
    right:0;
    border: 2px solid var(--ion-color-inria-blue);
    border-radius: 10px;
  }

  &:after {
    content: '';
    position: absolute;
    top: 50%;
    left: 50%;
    width: 0;
    height: 74px;
    cursor: pointer;
    background: transparent;
    box-sizing: border-box;
    border: 0 solid transparent;
    border-color: transparent transparent transparent rgba(32, 32, 32, 0.7);
    border-style: solid;
    border-width: 37px 0 37px 60px;
    transform: translate(-50%, -50%);
    transition: 100ms all ease;
  }
  &.playing {
    video{
      &::-webkit-media-controls-play-button,
      &::-webkit-media-controls-timeline,
      &::-webkit-media-controls-timeline-container,
      &::-webkit-media-controls-fullscreen-button{
        display: initial!important;
      }
    }

    &:after {
      border-style: double;
      border-width: 0px 0 0px 60px;
      animation: fadeOut .5s forwards;
      animation-delay: .5s;
    }
  }

  @keyframes fadeOut {
    from {
      opacity: 1;
    }
    to {
      opacity: 0;
    }
  }
}

.about-course {
  display: block;
  text-align: center;

  ion-text, ion-icon {
    display: inline-block;
    vertical-align: middle;
    text-decoration: underline;
  }
}

.start-course {
  margin: 1em 1em 2em 1em;
}

@media (max-height: 668px) {
  ion-content {
    font-size: 0.8em;
  }
  .title-wrapper {
    padding: 2em;

    h3{
      font-size: 20px;
    }
  }

  .trailer-course {
    margin: 4vh auto 2vh auto;
  }
}

@media (min-width: 650px) {
  .title-wrapper {
    margin-top: 4em;
    padding: 4em;

    .title-container {
      padding: 0 10vw;
    }
  }

  .trailer-course {
    margin: 4vh auto 2vh auto;
  }

  .start-course {
    margin: 2em 2em 4em 2em;
  }
}

